--- a/index.css
+++ b/index.css
@@ -619,6 +619,7 @@ button {
   /*background: url(./assets/images/6e3d5194-9321-4861-a18e-cf7e5f7c4b56.png)*/
   no-repeat center;
   background-size: cover;
+  box-shadow: 0 1px 15px 0 rgb(219, 221, 221);
   z-index: 25;
   
 }
