--- a/index.css
+++ b/index.css
@@ -2921,9 +2921,9 @@ z-index:75;
 opacity:0.4;
 z-index:76;
 }
+
 .MBD_C:hover
 {
-
  cursor: pointer; 
 }
 .swdetail
@@ -2944,4 +2944,32 @@ z-index:76;
   border-radius: 10px;
   /*color:#6fffb2;*/
   font-size: 12px;
+}
+.mq-stat{
+  position:absolute;
+  top:200px;
+  left:40px;
+  width:250px;
+  height:40px;
+  color:#87f5ba;
+  background-color: #000;
+  z-index: 150;
+  border-radius: 0px 0px 10px 10px;
+  font-size: 10px;
+  box-shadow: 0 1px 8px 0 rgb(0, 0, 0);
+  }
+
+
+.mq-head{
+position:absolute;
+top:160px;
+left:40px;
+width:250px;
+height:40px;
+color:#87f5ba;
+background-color: #000;
+z-index: 150;
+border-radius: 10px 10px 0px 0px;
+font-size: 10px;
+box-shadow: 0px 1px 8px 0px rgb(0, 0, 0);
 }
