--- a/index.css
+++ b/index.css
@@ -2973,3 +2973,20 @@ border-radius: 10px 10px 0px 0px;
 font-size: 10px;
 box-shadow: 0px 1px 8px 0px rgb(0, 0, 0);
 }
+/*#LDT1P*/
+.LTD2P
+{
+  /*margin-top:100px;*/
+  position:absolute;
+  top:125px;
+-webkit-transform:rotate(180deg); /* Chrome, Safari, Opera */
+transform:rotate(180deg); /* Standard syntax */
+}
+.LTD3P
+{
+  position:absolute;
+  top:70px;
+  left:136px;
+-webkit-transform:rotate(90deg); /* Chrome, Safari, Opera */
+transform:rotate(90deg); /* Standard syntax */
+}
