--- a/index.css
+++ b/index.css
@@ -1890,7 +1890,7 @@ z-index:18;
 .DRSWITCH
 {
 margin-top:100px;
-margin-left:250px;  
+margin-left:175px;  
 color:rgb(214, 212, 212);
 font-size: 10px;
 font-family:Arial, Helvetica, sans-serif;
@@ -2108,7 +2108,7 @@ z-index: 101;
     .soswitch
   {
     margin-top:100px;
-    margin-left:250px;   
+    margin-left:175px;   
     color:grey;
     font-size: 10px;
     font-family:Arial, Helvetica, sans-serif;
@@ -2286,7 +2286,7 @@ z-index: 101;
           .entrswitch
           {
             margin-top:100px;
-            margin-left:250px;  
+            margin-left:175px;  
             color:grey;
             font-size: 10px;
             font-family:Arial, Helvetica, sans-serif;
@@ -2436,7 +2436,7 @@ border-color: rgb(250, 248, 248);
                 display:block;
                 flex-direction: row;
                 margin-top:85px;
-                margin-left:250px;    
+                margin-left:175px;    
                 Width:345px;
                 height:220px;
                 border-color: rgb(110, 107, 107);
@@ -2525,7 +2525,7 @@ border-color: rgb(250, 248, 248);
                 display:block;
                 flex-direction: row;
                 margin-top:85px;
-                margin-left:250px;  
+                margin-left:175px;  
                 Width:90px;
                 height:220px;
                 border-color: rgb(110, 107, 107);
@@ -2731,7 +2731,7 @@ border-color: rgb(250, 248, 248);
                       place-items: center;
                       text-align: center;
                       top:410px;
-                      left:250px;
+                      left:175px;
                       font-size: 12px;
                       color:#ffffff;
                       }
@@ -2747,7 +2747,7 @@ border-color: rgb(250, 248, 248);
                       place-items: center;
                       text-align: center;
                       top:410px;
-                      left: 420px;
+                      left:345px;
                       font-size: 12px;
                       color:#ffffff;
                       }
@@ -2758,9 +2758,9 @@ border-color: rgb(250, 248, 248);
                         display:block;
                         flex-direction: row;
                         top:150px;
-                        margin-left:600px;  
-                        Width:780px;
-                        height:700px;
+                        margin-left:550px;  
+                        Width:850px;
+                        height:800px;
                         /*top:10px;
                         margin-left:10px; 
                         Width:1400px;
@@ -2800,13 +2800,16 @@ border-color: rgb(250, 248, 248);
 .DR_Area
 {
   position:absolute;
-top:335px;
-margin-left:437px;
-background-color: red;
-height: 148px;
-width:150px;
+top:410px;
+margin-left:490px;
+/* background-color: red;*/
+background-image: url("./assets/images/wifi_switch.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height:50px;
+width:50px;
 z-index: 100;
-opacity:0.4;
+opacity:0.9;
 }
 .DR_Area:hover
 {
@@ -2815,14 +2818,17 @@ opacity:0.4;
 }
 .SO_Area
 {
-  position:absolute;
-top:495px;
-margin-left:380px;
-background-color: rgb(0, 255, 183);
-height: 123px;
-width:210px;
+position:absolute;
+top:600px;
+margin-left:490px;
+
+background-image: url("./assets/images/wifi_switch.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height: 50px;
+width:50px;
 z-index: 100;
-opacity:0.4;
+opacity:0.9;
 }
 .SO_Area:hover
 {
@@ -2832,13 +2838,16 @@ opacity:0.4;
 .ENTR_Area
 {
   position:absolute;
-top:450px;
-margin-left:380px;
-background-color: rgb(162, 0, 255);
-height: 40px;
-width:49px;
+top:540px;
+margin-left:420px;
+background-image: url("./assets/images/wifi_switch.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height: 50px;
+width:50px;
+transform: rotate(270deg );
 z-index:75;
-opacity:0.4;
+opacity:0.9;
 }
 .ENTR_Area:hover
 {
@@ -2848,13 +2857,16 @@ opacity:0.4;
 .CENTRL_Courtyard
 {
   position:absolute;
-top:220px;
-margin-left:280px;
-background-color: rgb(115, 250, 133);
-height: 65px;
-width:100px;
+top:265px;
+margin-left:298px;
+background-color:rgb(79, 248, 155);
+background-image: url("./assets/images/wifi_switch_louver.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height: 50px;
+width:45px;
 z-index:75;
-opacity:0.4;
+opacity:0.9;
 }
 .CENTRL_Courtyard:hover
 {
@@ -2864,13 +2876,17 @@ opacity:0.4;
 .FRST_Floor_L
 {
   position:absolute;
-top:600px;
-margin-left:150px;
+top:690px;
+margin-left:154px;
 background-color:#1aa3ff;
-height: 30px;
-width:225px;
+background-image: url("./assets/images/wifi_switch_louver.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height: 50px;
+width:45px;
+transform: rotate(180deg );
 z-index:75;
-opacity:0.4;
+opacity:0.9;
 }
 .FRST_Floor_L:hover
 {
@@ -2880,11 +2896,15 @@ opacity:0.4;
 .PORTICO_C
 {
   position:absolute;
-top:310px;
-margin-left:150px;
-background-color: rgb(250, 4, 221);
-height: 138px;
-width:15px;
+top:325px;
+margin-left:155px;
+background-color: rgb(128, 3, 114);
+background-image: url("./assets/images/wifi_switch_louver.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height: 50px;
+width:45px;
+transform: rotate(270deg );
 z-index:75;
 opacity:0.4;
 }
@@ -2896,13 +2916,16 @@ opacity:0.4;
 .LIVING_C
 {
   position:absolute;
-top:65px;
-margin-left:280px;
+top:75px;
+margin-left:305px;
 background-color: rgb(196, 65, 0);
-height: 145px;
-width:15px;
+background-image: url("./assets/images/wifi_switch_louver.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+height: 50px;
+width:45px;
 z-index:75;
-opacity:0.7;
+opacity:0.9;
 }
 .LIVING_C:hover
 {
@@ -2912,13 +2935,16 @@ opacity:0.7;
 .MBD_C
 {
   position:absolute;
-top:230px;
-margin-left:670px;
+top:265px;
+margin-left:746px;
 background-color: rgb(159, 138, 3);
-height: 35px;
-width:36px;
+background-image: url("./assets/images/wifi_switch_mbd.png");
+background-repeat: no-repeat;
+background-size: 50px 50px;
+transform: rotate(180deg );
+height: 50px;
+width:45px;
 z-index:75;
-opacity:0.4;
 z-index:76;
 }
 
@@ -2931,10 +2957,10 @@ z-index:76;
   position:absolute;
   display:grid;
   /*flex-direction: row;*/
-  top:570px;
-  left:250px;    
+  top:590px;
+  left:175px;    
   Width:320px;
-  height:260px;
+  height:370px;
   border-color: rgb(110, 107, 107);
   border-width: 1px;
   border-style: solid;
@@ -2947,10 +2973,10 @@ z-index:76;
 }
 .mq-stat{
   position:absolute;
-  top:200px;
+  top:260px;
   left:40px;
   width:250px;
-  height:40px;
+  height:80px;
   color:#87f5ba;
   background-color: #000;
   z-index: 150;
@@ -2962,7 +2988,7 @@ z-index:76;
 
 .mq-head{
 position:absolute;
-top:160px;
+top:220px;
 left:40px;
 width:250px;
 height:40px;
@@ -2990,3 +3016,176 @@ transform:rotate(180deg); /* Standard syntax */
 -webkit-transform:rotate(90deg); /* Chrome, Safari, Opera */
 transform:rotate(90deg); /* Standard syntax */
 }
+
+/* Base styling */
+#attn_DR
+{
+position: absolute;
+top:410px;
+margin-left:500px;
+}
+#attn_ENTR
+{
+position: absolute;
+top:550px;
+margin-left:420px;
+}
+#attn_SO
+{
+position: absolute;
+top:600px;
+margin-left:500px;
+}
+
+#attn_CC
+{
+position: absolute;
+top:270px;
+margin-left:305px;
+
+}
+#attn_FF
+{
+position: absolute;
+top:690px;
+margin-left:160px;
+}
+#attn_PC
+{
+position: absolute;
+top:330px;
+margin-left:155px;
+}
+#attn_LR
+{
+position: absolute;
+top:75px;
+margin-left:305px;
+}
+#attn_MBD
+{
+position: absolute;
+top:265px;
+margin-left:748px;
+}
+
+.attention {
+
+  width: 40px; /* Circle size */
+  height: 40px;
+  border-radius: 50%;
+  background: #00ffb7; /* Initial circle color */
+  animation: pulse 2s infinite; /* Apply animation */
+}
+
+/* Animation keyframes */
+@keyframes pulse {
+  0% {
+      transform: scale(1);
+      opacity: 1;
+  }
+  100% {
+      transform: scale(2.5); /* Increase circle size */
+      opacity: 0; /* Fade out */
+  }
+}
+
+.setng
+{
+position:relative;
+width:50px;
+height:50px;
+
+top:-430px;
+left :330px;
+z-index: 160;
+
+}
+.setngimg
+{
+  box-shadow: 0 1px 15px 0 rgb(255, 255, 255);
+  border-radius: 50px;
+
+}
+.setinginp
+{
+display:inline-block;
+margin-top:8px;  
+width:300px;
+height:30px;
+border-radius: 8px;
+background-color: rgb(116, 112, 112);
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+border-style: none;
+place-items: center;
+text-align: center;
+z-index: 160;
+font-size: 17px;
+color:rgb(96, 255, 207);
+}
+
+.settopic
+{
+  position:absolute;
+  display:block;
+  flex-direction: row;
+  margin-top:70px;
+  margin-left:160px;    
+  Width:345px;
+  height:430px;
+  border-color: rgb(110, 107, 107);
+  border-width: 1px;
+  border-style: solid;
+  background-color: #e4e6ea;
+  text-align:center; 
+  box-shadow: 0 1px 15px 0 grey;
+  border-radius: 15px;
+  /*color:#6fffb2;*/
+  font-size: 12px;
+  z-index: 160;
+} 
+.topicsave
+{
+position: absolute;
+margin-top: 48px;
+left:60px;
+width:70px;
+height:35px;
+border-radius: 25px;
+background-color: rgb(83, 255, 204);
+box-shadow: 0 0 18px rgb(102, 100, 100);
+border-style: none;
+place-items: center;
+text-align: center;
+}
+.topicsave:hover
+{
+  cursor:pointer;
+  margin-top:46px;
+  box-shadow: 0 0 30px rgb(102, 100, 100);
+}
+
+
+
+.topicload
+{
+  position:absolute;
+  margin-top:10px;
+  margin-left:3cqmax;
+  width:70px;
+  height:35px;
+  border-radius: 25px;
+  background-color: rgb(83, 255, 204);
+  box-shadow: 0 0 18px rgb(102, 100, 100);
+  border-style: none;
+  place-items: center;
+  text-align: center;
+  z-index: 180;
+  
+  }
+  .topicload:hover
+  {
+    cursor:pointer;
+    margin-top:8px;
+    box-shadow: 0 0 30px rgb(102, 100, 100);
+  }
