--- a/index.css
+++ b/index.css
@@ -2987,6 +2987,7 @@ z-index:76;
   color:#87f5ba;
   background-color: #000;
   z-index: 150;
+  overflow-wrap: break-word;
   border-radius: 0px 0px 10px 10px;
   font-size: 10px;
   box-shadow: 0 1px 8px 0 rgb(0, 0, 0);
